test/scc_test/exp/semantic-errors/068.t
void test()
{
    float a;
    a |= 2;
}